# playground

./: .gitignore  blabla.py
code-interpreter/: Pipfile  README.md  episode_info.csv  main-csv.py  main-python.py  main-router.py
cybersecurity/: roadmap-link.txt
docker-compose-fastapi-mysql/: Dockerfile  README.md  docker-compose.yml  main.py
hello-genai-/: .env  README.md  docker-compose.yml  run.sh
hello-world-langchain/: README.md  env  main.py  pyproject.toml
ice_breaker_/: .env_example  Pipfile  README.md  ice_breaker_app.py  ice_breaker_v1.py  ice_breaker_v2.py  ice_breaker_v3.py  ice_breaker_v4.py  ice_breaker_v5_full_stack.py  linkedin_lookup_main.py  output_parsers.py
langchain-rag/: .env  .env-example  Pipfile  README.md  ingestion.py  main.py  mediumblog1.txt
langchain-rag-pdfloader-vectorstore-inmemory/: Pipfile  README.md  main.py
langgraph-react-agent/: main.py  nodes.py  pyproject.toml  react.py  readme.md
offset-issues/: Dockerfile  README.md  init.sql
react-langchain/: Pipfile  ReadMe  callbacks.py  main.py  main_by_claude.py  main_by_claude_2.py
react-search-agent/: .env-example  README.md  main.py  pyproject.toml  schemas.py
sharding/: README.md  app.py  init.sql  requirements.txt
testing-documentation/: .env-example  Pipfile  README.md  Tavily Crawl Demo Tutorial.ipynb  Tavily Demo Tutorial.ipynb  firecrawlMock.py  ingestion.py  main.py  mapper.py  testing_firecrawl.py
tls-testing/: generate-certificate.py  server.crt  server.key  sslkeylog.txt  tls_client.py  tls_server.py
yield-example/: yield-example.py
(+14 files in other folders)
